--- a/root/public/style.css
+++ b/root/public/style.css
@@ -130,8 +130,8 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    text-align: center;
+    justify-content: space-evenly;
+
 
 }
 
