--- a/root/public/style_poke.css
+++ b/root/public/style_poke.css
@@ -53,6 +53,10 @@ main {
 }
 
 .ConteudoDentro {
+    border-bottom: 1px solid #ccc;
+    display: flex;
+    justify-content: space-between;
+    text-align: start;
     color: white;
     margin: 50px;
 }
